--- a/src/components/Main Card/mainCard.scss
+++ b/src/components/Main Card/mainCard.scss
@@ -1,18 +1,22 @@
 .mainCard-container {
-	border: 2px solid red;
+	// border: 2px solid red;
 	display: flex;
 	flex-direction: column;
 	margin: 20px auto;
 	width: 50%;
 	align-items: center;
+	background-color: #1F363D;
+	color: white;
+	border-radius: 10px;
 
 	@media(max-width: 500px){
 		width: 100%;
 	}
 
 	.mainCard-img-container{
-		border: 2px solid orange;
-		
+		// border: 2px solid orange;
+		width: 100%;
+
 		img{
 			width: 100%;
 			object-fit: cover;
@@ -23,5 +27,10 @@
 	.mainCard-text{
 		// border: 2px solid green;
 		text-align: center;
+		margin: 20px 0;
+		a{
+			text-decoration: none;
+			color: white;
+		}
 	}
 }
