--- a/src/components/Sub Card/subCard.scss
+++ b/src/components/Sub Card/subCard.scss
@@ -5,7 +5,8 @@
 	display: flex;
 	flex-direction: column;
 	width: 45%;
-	padding: 10px;
+	border-radius: 10px;
+	background-color: #1F363D;
 
 	@media(max-width: 500px){
 		width: 100%;
@@ -18,4 +19,11 @@
 			border-radius: 10px;
 		}
 	}
+
+	h2{
+		margin:20px 0;
+		text-align: center;
+		color: white;
+	}
+
 }
